--- a/index.css
+++ b/index.css
@@ -86,7 +86,9 @@ body{
     font-size: 400%;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
-    margin-left: 43%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 #rt2{
     position: absolute;
@@ -94,7 +96,9 @@ body{
     font-size: 200%;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
-    margin-left: 29%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 input, button{
     outline:none;
