--- a/app/desktop/index.css
+++ b/app/desktop/index.css
@@ -9,7 +9,7 @@ body{
 #map{
     width: 40%;
 }
-#photo{
+#photocont{
     position: absolute;
     top: 40%;
     width: 40%;
@@ -17,10 +17,13 @@ body{
     background-color: #111;
 }
 #pt{
+    padding: 0.5%;
     position: absolute;
     font-family: 'Quicksand', sans-serif;
-    top: 40%;
+    top: 36%;
     font-size: 200%;
+    background-color: rgba(17, 17, 17, 0.336);
+    width: 40%;
 }
 #snp{
     text-align: center;
@@ -42,11 +45,14 @@ button{
 }
 #gp{
     padding: 1%;
-    position: relative;
-    background-color:black;
+    background-color:rgba(0, 0, 0, 0.363);
     border: none;
     width: 30%;
     font-size: 150%;
+    top: 90%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 #ct{
     position: absolute;
@@ -63,7 +69,6 @@ button{
     height: 40%;
 }
 #status{
-    color:rgb(0, 255, 136);
     position: absolute;
     font-family: 'Quicksand', sans-serif;
     font-size: 200%;
@@ -162,4 +167,120 @@ button{
     transform: translate(-50%, -50%);
     border-image-source: linear-gradient(to bottom right, #3ad0d5, #d53a9d);
     width: 35.7%;
+}
+#volt{
+    position: absolute;
+    top: 30%;
+    left: 65%;
+    font-size: 150%;
+}
+#pfc{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.warn{
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+    z-index: 99999;
+    height: 40%;
+    border-radius: 50px;
+    border-style:solid;
+    border-width: 3px;
+    border-color: #8c35ff;
+    background-color: #111;
+    color: rgb(255, 239, 215);
+    font-family: 'Roboto', sans-serif;
+    font-size: 150%;
+    display: none;
+    opacity: 0;
+}
+.warntext{
+    position: absolute;
+    top: 10%;
+    text-align: center;
+    padding: 2%;
+}
+.close{
+    position: absolute;
+    top: 4%;
+    right: 4%;
+    cursor: pointer;
+}
+a{
+    color: #8c35ff;
+    outline: none;
+}
+#settingslist{
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 700px;
+    z-index: 99999;
+    height: 500px;
+    border-radius: 50px;
+    border-style:solid;
+    border-width: 3px;
+    border-color: #8c35ff;
+    background-color: #111;
+    color: rgb(255, 239, 215);
+    font-family: 'Roboto', sans-serif;
+    display: none;
+    opacity: 0;
+}
+#st{
+    text-align: center;
+    font-size: 200%;
+}
+#rtost{
+    font-size: 160%;
+    padding-left: 10px;
+}
+#rtos{
+    font-size: 140%;
+    margin-left: 10%;
+}
+#rtos input{
+    width: 30px;
+    color:rgb(255, 239, 215);
+    background-color: #111;
+    border: none;
+    outline: none;
+    font-size: 101%;
+}
+select{
+    background-color: #111;
+    color:rgb(255, 239, 215);
+    border: none;
+    outline: none;
+    font-size: 101%;
+    cursor: pointer;
+}
+#gphst{
+    font-size: 160%;
+    padding-left: 10px;
+}
+#gphs{
+    font-size: 140%;
+    margin-left: 10%;
+}
+#savesettings{
+    position: absolute;
+    top: 95.8%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    border-style:solid;
+    border-width: 3px;
+    border-color: #8c35ff;
+    border-bottom-color: #111;
+    padding: 1%;
+    font-size: 150%;
 }
