--- a/app/desktop/index.css
+++ b/app/desktop/index.css
@@ -289,3 +289,18 @@ select{
     width: 90%;
     height: 90%;
 }
+#getInstructions{
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    background-color: #111;
+    color:rgb(255, 239, 215);
+    padding: 0.5%;
+    font-size: 120%;
+    border-style:solid;
+    border-width: 3px;
+    border-top-color: #8c35ff;
+    border-left-color: #8c35ff;
+    border-bottom-color: #000;
+    border-right: none;
+}
