--- a/app/desktop/index.css
+++ b/app/desktop/index.css
@@ -205,6 +205,9 @@ button{
     top: 10%;
     text-align: center;
     padding: 2%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 .close{
     position: absolute;
