--- a/app/desktop/index.css
+++ b/app/desktop/index.css
@@ -199,15 +199,12 @@ button{
     display: none;
     opacity: 0;
     word-wrap: break-word;
+    overflow: scroll;
+    scrollbar-width: none;
 }
 .warntext{
-    position: absolute;
-    top: 10%;
     text-align: center;
     padding: 2%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
 }
 .close{
     position: absolute;
