--- a/app/desktop/index.css
+++ b/app/desktop/index.css
@@ -176,8 +176,9 @@ button{
 }
 #pfc{
     position: absolute;
-    width: 100%;
-    height: 100%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 .warn{
     position:absolute;
