--- a/index.css
+++ b/index.css
@@ -12,7 +12,6 @@ body{
     font-size: 500%;
     font-family: 'Quicksand', sans-serif;
     left: 23%;
-    opacity: 0;
 }
 #background{
     width: 100%;
@@ -153,17 +152,14 @@ input, button{
 #m1{
     top: 7%;
     left: 38%;
-    opacity: 0;
 }
 #m2{
     top: 7%;
     left: 48%;
-    opacity: 0;
 }
 #m3{
     top: 7%;
     left: 58%;
-    opacity: 0;
 }
 #login{
     top: 8%;
@@ -172,7 +168,6 @@ input, button{
     font-size: 130%;
     width: 10%;
     font-family: 'Roboto', sans-serif;
-    opacity: 0;
 }
 #arrowtop{
     width: 50px;
@@ -202,5 +197,24 @@ input, button{
     font-size: 130%;
     width: 10%;
     font-family: 'Roboto', sans-serif;
-    opacity: 0;
+}
+#loading{
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999999;
+    background: rgb(42,157,168);
+    background: radial-gradient(circle, rgba(42,157,168,1) 0%, rgba(94,48,119,1) 100%); 
+}
+#loadingLogo{
+    position: fixed;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    box-shadow: 0px 0px 15px #111;
 }
