--- a/app/desktop/index.css
+++ b/app/desktop/index.css
@@ -305,3 +305,23 @@ select{
     border-bottom-color: #000;
     border-right: none;
 }
+#loading{
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999999;
+    background: rgb(42,157,168);
+    background: radial-gradient(circle, rgba(42,157,168,1) 0%, rgba(94,48,119,1) 100%); 
+}
+#loadingLogo{
+    position: fixed;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    box-shadow: 0px 0px 15px #111;
+}
