--- a/mobile/index.css
+++ b/mobile/index.css
@@ -93,6 +93,7 @@ p{
     font-size: 240%;
     font-family: 'Roboto', sans-serif;
     top: 260%;
+    width: 100%;
     background-color: #111;
     padding-top: 30%;
     padding-bottom: 30%;
@@ -194,7 +195,10 @@ input, #signup{
     position: fixed;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(2.5);
     top: 50%;
     box-shadow: 0px 0px 15px #111;
+}
+.pace{
+    transform: scale(2.5);
 }
