--- a/index.css
+++ b/index.css
@@ -5,13 +5,17 @@ body{
     color:rgb(255, 239, 215);
     margin: 0;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 #title{
     position: absolute;
     top: 35%;
     font-size: 500%;
     font-family: 'Quicksand', sans-serif;
-    left: 23%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 #background{
     width: 100%;
@@ -23,7 +27,9 @@ body{
     height: 50px;
     position: absolute;
     top: 93%;
-    left: 48.5%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
     filter: invert(100%);
 }
 #mb1{
@@ -38,7 +44,9 @@ body{
     position: absolute;
     font-size: 400%;
     top: 130%;
-    left: 45%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
     text-align:center;
     font-family: 'Quicksand', sans-serif;
 }
@@ -52,19 +60,19 @@ body{
 #mb2{
     position: absolute;
     top: 250%;
-    left: 60%;
+    right: 3%;
     filter: brightness(40%);
 }
 #mb3{
     position: absolute;
     top: 280%;
-    left: 70%;
+    right: 13%;
     filter: brightness(40%);
 }
 #mb4{
     position: absolute;
     top: 290%;
-    left: 55%;
+    right: -2%;
     filter: brightness(40%);
 }
 #rht{
@@ -107,24 +115,32 @@ input, button{
     color: rgb(255, 239, 215);
     background-color: black;
     border-radius: 40px;
-    width: 20%;
+    width: 25%;
     position: absolute;
     font-size: 200%;
     font-family: 'Roboto', sans-serif;
     padding-left: 15px;
     padding-right: 15px;
 }
-#nickname{
+#signupcont{
+    position: absolute;
     top: 390%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+}
+
+#nickname{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    
 }
 #password{
-    top: 400%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    
 }
 #floor{
     position: absolute;
@@ -136,11 +152,12 @@ input, button{
     transform: translate(-50%, -50%);
 }
 #signup{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
     cursor: pointer;
-    top: 410%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    
 }
 .menu{
     position: absolute;
@@ -181,11 +198,9 @@ input, button{
     display: none;
 }
 #status{
-    position: absolute;
-    top: 420%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     color: red;
     font-family: 'Roboto', sans-serif;
     text-align: center;
