--- a/app/desktop/index.css
+++ b/app/desktop/index.css
@@ -187,7 +187,7 @@ button{
     height: 40%;
     border-radius: 50px;
     border-style:solid;
-    border-width: 3px;
+    border-width: 0.17vw;
     border-color: #8c35ff;
     background-color: #111;
     color: rgb(255, 239, 215);
@@ -225,7 +225,7 @@ a{
     height: 60vh;
     border-radius: 50px;
     border-style:solid;
-    border-width: 3px;
+    border-width: 0.17vw;
     border-color: #8c35ff;
     background-color: #111;
     color: rgb(255, 239, 215);
