added responsive design; work on the functionality of the elements has begun

--- a/app/mobile/index.css
+++ b/app/mobile/index.css
@@ -7,7 +7,7 @@ body{
 }
 .swiper {
   position: absolute;
-  width: 90%;
+  width: 93vw;
   height: 80vh;
   margin-top: 10%;
 }
@@ -22,15 +22,15 @@ body{
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  top: 20%;
-  width: 80%;
-  height: 40%;
+  top: 20vh;
+  width: 80vw;
+  height: 40vh;
 }
 #status{
   position: absolute;
   top: -1.5%;
   left: 0.5%;
-  font-size: 120%;
+  font-size: 2.3vh;
 }
 input{
   outline: none;
@@ -40,30 +40,36 @@ button{
   cursor: pointer;
   color: rgb(255, 239, 215);
   font-family: 'Roboto', sans-serif;
-  border: 10px solid;
+  border: 0.5vh solid;
   border-image-slice: 1;
-  border-width: 5px;
   padding: 4%;
   background-color: #111;
-  font-size: 160%;
+  font-size: 3vh;
 }
 #l{
-  margin-top: 90%;
+  position:absolute;
+  top: 40vh;
   width: 49%;
   border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
 }
 #r{
+  position:absolute;
+  top: 40vh;
   width: 49%;
   text-align: center;
   right: 0%;
   border-image-source: linear-gradient(to left, #3ad0d5, #743ad5);
 }
 #h{
+  position:absolute;
+  top: 50vh;
   width: 49%;
   text-align: center;
   border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
 }
 #rtp{
+  position:absolute;
+  top: 50vh;
   width: 49%;
   right: 0%;
   border-image-source: linear-gradient(to left, #3ad0d5, #743ad5);
@@ -71,12 +77,12 @@ button{
 #pt{
   font-family: 'Quicksand', sans-serif;
   position: absolute;
-  top: 20%;
-  font-size: 140%;
+  top: 15vh;
+  font-size: 2.3vh;
 }
 #gp{
   position: absolute;
-  top: 80%;
+  top: 70vh;
   color: rgb(255, 239, 215);
   border-color: rgb(255, 239, 215);
   left: 50%;
@@ -100,7 +106,7 @@ button{
 }
 #fl{
   position: absolute;
-  top: 60%;
+  top: 50vh;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
@@ -110,49 +116,49 @@ button{
   font-family: 'Roboto', sans-serif;
   padding: 4%;
   position: absolute;
-  font-size: 180%;
+  font-size: 3vh;
   background: linear-gradient(to top right, #3ad0d5, #d53a9d);
-  width: 80%;
+  width: 80vw;
   text-align: center;
 }
 #ut{
   position: absolute;
   font-family: 'Quicksand', sans-serif;
-  font-size: 180%;
+  font-size: 3vh;
   left: 50%;
-  top: 25%;
+  top: 25vh;
   margin-right: -50%;
   transform: translate(-50%, -50%);
 }
 #ub{
   position: absolute;
-  top: 80%;
+  top: 70vh;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
   border-image-source: linear-gradient(to bottom right, #3ad0d5, #d53a9d);
-  width: 80%;
+  width: 80vw;
 }
 
 #st{
   text-align: center;
-  font-size: 180%;
+  font-size: 3vh;
 }
 #rtost{
-  font-size: 140%;
+  font-size: 2.3vh;
   padding-left: 10px;
 }
 #rtos{
-  font-size: 120%;
+  font-size: 2vh;
   margin-left: 10%;
 }
 #rtos input{
-  width: 30px;
+  width: 5vw;
   color:rgb(255, 239, 215);
   background-color: #111;
   border: none;
   outline: none;
-  font-size: 101%;
+  font-size: 2vh;
 }
 select{
   background-color: #111;
@@ -163,25 +169,25 @@ select{
   cursor: pointer;
 }
 #gphst{
-  font-size: 140%;
+  font-size: 2.3vh;
   padding-left: 10px;
 }
 #gphs{
-  font-size: 120%;
+  font-size: 2vh;
   margin-left: 10%;
 }
 #savesettings{
   position: absolute;
-  top: 90%;
+  top: 70vh;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  width: 300px;
+  width: 30vw;
   border-style:solid;
-  border-width: 3px;
+  border-width: 0.5vh;
   border-color: #8c35ff;
   padding: 1%;
-  font-size: 150%;
+  font-size: 2.4vh;
 }
 #loading{
   position: fixed;
@@ -204,6 +210,46 @@ select{
   box-shadow: 0px 0px 15px #111;
 }
 #map{
-  width: 100%;
-  margin-top: 80%;
+  width: 98%;
+  margin-top: 35vh;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+.warn{
+  z-index: 3000;
+  position: absolute;
+  width: 90vw;
+  height: 70vh;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  opacity: 0;
+  border-radius: 10px;
+  background-color: #222;
+  color:rgb(255, 239, 215);
+  padding: 1vw;
+  word-wrap: break-word;
+  overflow: auto;
+  scrollbar-width: none;
+  border-style:solid;
+  border-width: 0.17vw;
+  border-color: #8c35ff;
+}
+.warn::-webkit-scrollbar{ width :0px; }
+.warntext{
+  text-align: center;
+  margin-top: 10vh;
+  font-size: 1.8vh;
+}
+.close{
+  position: absolute;
+  right: 4vw;
+  top: 4vw;
+  cursor: pointer;
+}
+#rtowarn{
+  height: 30vh;
 }
