--- a/app/mobile/index.css
+++ b/app/mobile/index.css
@@ -255,13 +255,26 @@ select{
 }
 #alt{
   position:absolute;
-  top: 80vh;
+  top: 90vh;
   left: 10vw;
   font-size: 1.8vh;
+  color:rgb(255, 239, 215);
+  font-family: 'Roboto', sans-serif;
 }
 #volt{
   position:absolute;
-  top: 80vh;
+  top: 90vh;
   right: 10vw;
   font-size: 1.8vh;
+  color:rgb(255, 239, 215);
+  font-family: 'Roboto', sans-serif;
+}
+#pfc{
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+#photo{
+  width: 100%;
+  height: 40vh;
 }
