--- a/index.css
+++ b/index.css
@@ -9,8 +9,8 @@ body{
 }
 #title{
     position: absolute;
-    top: 35%;
-    font-size: 500%;
+    top: 35vh;
+    font-size: 5vw;
     font-family: 'Quicksand', sans-serif;
     left: 50%;
     margin-right: -50%;
@@ -21,28 +21,30 @@ body{
     width: 100%;
     height: 100%;
     filter: grayscale(10%) brightness(20%);
+    object-fit:cover;
 }
 #down{
-    width: 50px;
-    height: 50px;
+    width: 2vw;
+    height: 2vw;
     position: absolute;
-    top: 93%;
+    top: 95%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
     filter: invert(100%);
 }
 #mb1{
-    width: 90%;
-    height: 90%;
+    width: 90vw;
+    height: 90vh;
     position: absolute;
-    margin-left: 10%;
+    margin-left: 10vh;
     top: 120%;
     filter: grayscale(10%) brightness(20%);
+    object-fit:contain;
 }
 #pt{
     position: absolute;
-    font-size: 400%;
+    font-size: 4vw;
     top: 130%;
     left: 50%;
     margin-right: -50%;
@@ -52,7 +54,7 @@ body{
 }
 #p{
     position: absolute;
-    font-size: 200%;
+    font-size: 1.5vw;
     top: 150%;
     text-align:center;
     font-family: 'Roboto', sans-serif;
@@ -60,37 +62,46 @@ body{
 #mb2{
     position: absolute;
     top: 250%;
-    right: 3%;
+    right: 3vw;
     filter: brightness(40%);
+    height: 40vh;
+    width: 30vw;
+    object-fit:contain;
 }
 #mb3{
     position: absolute;
     top: 280%;
-    right: 13%;
+    right: 9vw;
     filter: brightness(40%);
+    height: 50vh;
+    width: 50vh;
+    object-fit:contain;
 }
 #mb4{
     position: absolute;
-    top: 290%;
-    right: -2%;
+    top: 270%;
+    right: -5vw;
     filter: brightness(40%);
+    height: 80vh;
+    width: 30vw;
+    object-fit:contain;
 }
 #rht{
     position: absolute;
     top: 250%;
-    font-size: 400%;
+    font-size: 4vw;
     font-family: 'Quicksand', sans-serif;
 }
 #rh{
     position: absolute;
     top: 280%;
-    font-size: 200%;
+    font-size: 2vw;
     font-family: 'Roboto', sans-serif;
 }
 #rt{
     position: absolute;
     top: 350%;
-    font-size: 400%;
+    font-size: 4vw;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
     left: 50%;
@@ -100,7 +111,7 @@ body{
 #rt2{
     position: absolute;
     top: 370%;
-    font-size: 200%;
+    font-size: 1.8vw;
     font-family: 'Quicksand', sans-serif;
     text-align: center;
     left: 50%;
@@ -109,7 +120,7 @@ body{
 }
 input, button{
     outline:none;
-    border-width: 4px;
+    border-width: 0.2vw;
     border-style:solid;
     border-color:rgb(255, 239, 215);
     color: rgb(255, 239, 215);
@@ -117,7 +128,7 @@ input, button{
     border-radius: 40px;
     width: 25%;
     position: absolute;
-    font-size: 200%;
+    font-size: 2vw;
     font-family: 'Roboto', sans-serif;
     padding-left: 15px;
     padding-right: 15px;
@@ -145,7 +156,7 @@ input, button{
 #floor{
     position: absolute;
     top: 450%;
-    font-size: 150%;
+    font-size: 1.2vw;
     font-family: 'Roboto', sans-serif;
     left: 50%;
     margin-right: -50%;
@@ -160,29 +171,31 @@ input, button{
     
 }
 .menu{
-    position: absolute;
     color: rgb(255, 239, 215);
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
-    font-size: 130%;
+    font-size: 1vw;
+    margin: 4vw;
 }
-#m1{
-    top: 7%;
-    left: 38%;
+#menucont{
+    top: 10%;
+    position: absolute;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 50vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
 }
-#m2{
-    top: 7%;
-    left: 48%;
-}
-#m3{
-    top: 7%;
-    left: 58%;
-}
+
 #login{
     top: 8%;
     left: 87%;
     cursor: pointer;
-    font-size: 130%;
+    font-size: 1.1vw;
     width: 10%;
     font-family: 'Roboto', sans-serif;
 }
@@ -190,12 +203,14 @@ input, button{
     width: 50px;
     height: 50px;
     position: fixed;
-    top: 93%;
-    left: 94%;
+    bottom: 2vw;
+    right: 2vw;
     filter: invert(100%);
     transform: rotate(180deg);
     cursor: pointer;
     display: none;
+    height: 3vw;
+    width: 3vw;
 }
 #status{
     display: block;
@@ -204,13 +219,14 @@ input, button{
     color: red;
     font-family: 'Roboto', sans-serif;
     text-align: center;
+    font-size: 1.1vw;
 }
 #app{
     top: 8%;
     right: 87%;
     cursor: pointer;
-    font-size: 130%;
-    width: 10%;
+    font-size: 1.1vw;
+    width: 10vw;
     font-family: 'Roboto', sans-serif;
 }
 #loading{
