--- a/app/mobile/index.css
+++ b/app/mobile/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
 body{
   margin: 0;
   background-color: #111;
@@ -295,4 +296,7 @@ select{
 }
 a{
   color:rgb(255, 239, 215);
+}
+code{
+  font-family: 'Source Code Pro', monospace;
 }
