--- a/mobile/index.css
+++ b/mobile/index.css
@@ -12,29 +12,23 @@ body{
     height: 35vh;
     width: 100%;
     filter: brightness(30%) blur(5px);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 10%);
     object-fit:cover;
 }
-#title1{
+#title{
     position: absolute;
-    clip-path: polygon(0% 10%, 100% 80%, 100% 100%, 0% 100%);
+    top: 3vh;
+    clip-path: polygon(0% 0%, 100% 20%, 100% 100%, 0% 80%);
     background-color: #111;
     width: 100%;
-    height: 30%;
+    height: 90vh;
     font-family: 'Quicksand', sans-serif;
     font-size: 0.5vh;
     text-align: center;
-}
-#title2{
-    position: absolute;
-    background-color: #111;
-    width: 100%;
-    height: 71%;
     font-family: 'Quicksand', sans-serif;
     font-size: 3vh;
-    top: 29%;
-    text-align: center;
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 60%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #clover{
     position: absolute;
@@ -42,7 +36,6 @@ body{
     width: 100%;
     height: 25vh;
     filter: brightness(30%) blur(5px);
-    clip-path: polygon(0% 0%, 100% 70%, 100% 100%, 0% 100%);
     object-fit:cover;
 }
 #down{
@@ -70,11 +63,12 @@ p{
 #p{
     font-size: 2vh;
     font-family: 'Roboto', sans-serif;
-    top: 160%;
+    top: 170%;
     background-color: #111;
-    clip-path: polygon(0% 20%, 100% 40%, 100% 100%, 0% 80%);
-    padding-top: 90%;
-    padding-bottom: 60%;
+    clip-path: polygon(0% 0%, 100% 20%, 100% 100%, 0% 80%);
+    height: 30vh;
+    padding-top: 30%;
+    padding-bottom: 30%;
     padding-left: 1%;
     padding-right: 1%;
 }
