--- a/login/login.css
+++ b/login/login.css
@@ -15,46 +15,36 @@ input, button{
     color: rgb(255, 239, 215);
     background-color: black;
     border-radius: 40px;
-    width: 20%;
-    position: absolute;
+    width: 80%;
+    max-width: 500px;
     font-size: 200%;
     font-family: 'Roboto', sans-serif;
     padding-left: 15px;
     padding-right: 15px;
-}
-#nickname{
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    top: 30%;
-}
-#password{
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    top: 40%;
+    margin-top: 4vh;
 }
 #signin{
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
     cursor: pointer;
 }
 #title{
-    font-size: 400%;
+    font-size: 3.5em;
     font-family: 'Quicksand', sans-serif;
     text-align:center;
 }
 #status{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
     color: red;
     font-family: 'Roboto', sans-serif;
     text-align: center;
+    font-size: 1em;
+    margin-top: 3vh;
+}
+#siContainer{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 #loading{
     position: fixed;
