--- a/index.css
+++ b/index.css
@@ -7,22 +7,58 @@ body{
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
+#menucont{
+    margin-top: 3vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+#heading{
+    width: 100vw;
+    min-height: 600px;
+}
+#login{
+    margin-right: 24vw;
+    cursor: pointer;
+    font-size: 1.1vw;
+    width: 10vw;
+    font-family: 'Roboto', sans-serif;
+}
+#app{
+    margin-left: 28vw;
+    cursor: pointer;
+    font-size: 1.1vw;
+    width: 10vw;
+    font-family: 'Roboto', sans-serif;
+}
+.menu{
+    color: rgb(255, 239, 215);
+    cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1vw;
+    margin-left: 4vw;
+}
 #title{
-    position: absolute;
-    top: 35%;
+    margin-top: 35vh;
     font-size: 5vw;
     font-family: 'Quicksand', sans-serif;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
     text-align: center;
 }
 #background{
     width: 100%;
-    height: 100%;
-    filter: grayscale(10%) brightness(20%);
-    object-fit:contain;
-    min-height: 400px;
+    filter: grayscale(10%) brightness(20%) blur(5px);
+    object-fit:none;
+    -webkit-filter: grayscale(10%) brightness(20%) blur(5px);
+    -moz-filter: grayscale(10%) brightness(20%) blur(5px);
+    -o-filter: grayscale(10%) brightness(20%) blur(5px);
+    -ms-filter: grayscale(10%) brightness(20%) blur(5px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index:-1;
+    margin: 0;
+    transform: scale(1.2);
 }
 #down{
     width: 2vw;
@@ -35,90 +71,73 @@ body{
     filter: invert(100%);
 }
 #mb1{
-    width: 90vw;
-    height: 90vh;
     position: absolute;
-    margin-left: 10vh;
-    top: 120vh;
-    filter: grayscale(10%) brightness(20%);
-    object-fit:contain;
+    filter: grayscale(10%) brightness(20%) blur(7px);
+    object-fit:none;
+    -webkit-filter: grayscale(10%) brightness(20%) blur(7px);
+    -moz-filter: grayscale(10%) brightness(20%) blur(7px);
+    -o-filter: grayscale(10%) brightness(20%) blur(7px);
+    -ms-filter: grayscale(10%) brightness(20%) blur(7px);
+    left: 0;
+    z-index:-1;
+    margin: 0;
+    transform: scale(0.9);
+    width: 100vw;
+}
+#projectCont{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 #pt{
-    position: absolute;
     font-size: 4vw;
-    top: 130vh;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    text-align:center;
     font-family: 'Quicksand', sans-serif;
 }
 #p{
-    position: absolute;
     font-size: 1.5vw;
-    top: 150vh;
     text-align:center;
     font-family: 'Roboto', sans-serif;
+}
+#hardwareCont{
     width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+#hardImgCont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: brightness(40%);
+    -webkit-filter: brightness(40%);
+    -moz-filter: brightness(40%);
+    -o-filter: brightness(40%);
+    -ms-filter: brightness(40%);
 }
 #mb2{
-    position: absolute;
-    top: 250vh;
-    right: 3vw;
-    filter: brightness(40%);
-    height: 40vh;
+    height: 35vw;
     width: 30vw;
     object-fit:contain;
 }
 #mb3{
-    position: absolute;
-    top: 280vh;
-    right: 12vw;
-    filter: brightness(40%);
     height: 20vw;
     width: 20vw;
     object-fit:contain;
 }
 #mb4{
-    position: absolute;
-    top: 270vh;
-    right: -5vw;
-    filter: brightness(40%);
     height: 40vw;
     width: 30vw;
     object-fit:contain;
 }
 #rht{
-    position: absolute;
-    top: 250vh;
     font-size: 4vw;
     font-family: 'Quicksand', sans-serif;
 }
 #rh{
-    position: absolute;
-    top: 280vh;
     font-size: 2vw;
     font-family: 'Roboto', sans-serif;
-}
-#rt{
-    position: absolute;
-    top: 350vh;
-    font-size: 4vw;
-    font-family: 'Quicksand', sans-serif;
-    text-align: center;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-}
-#rt2{
-    position: absolute;
-    top: 370vh;
-    font-size: 1.8vw;
-    font-family: 'Quicksand', sans-serif;
-    text-align: center;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
 }
 input, button{
     outline:none;
@@ -129,77 +148,44 @@ input, button{
     background-color: black;
     border-radius: 40px;
     width: 25%;
-    position: absolute;
     font-size: 2vw;
     font-family: 'Roboto', sans-serif;
     padding-left: 15px;
     padding-right: 15px;
 }
 #signupcont{
-    position: absolute;
-    top: 390vh;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-
-#nickname{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    
+#rt{
+    font-size: 4vw;
+    font-family: 'Quicksand', sans-serif;
+    text-align: center;
 }
-#password{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    
-}
-#floor{
-    position: absolute;
-    top: 450vh;
-    font-size: 1.2vw;
-    font-family: 'Roboto', sans-serif;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+#rt2{
+    margin-top:1vh;
+    font-size: 1.8vw;
+    font-family: 'Quicksand', sans-serif;
+    text-align: center;
 }
 #signup{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
+    margin-top:4vh;
     cursor: pointer;
-    
 }
-.menu{
-    color: rgb(255, 239, 215);
-    cursor: pointer;
+#nickname{
+    margin-top:4vh;
+}
+#password{
+    margin-top:4vh;
+}
+#floor{
+    font-size: 1.2vw;
     font-family: 'Roboto', sans-serif;
-    font-size: 1vw;
-    margin: 4vw;
-}
-#menucont{
-    top: 10vh;
-    position: absolute;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    width: 50vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-#login{
-    top: 8vh;
-    left: 87%;
-    cursor: pointer;
-    font-size: 1.1vw;
-    width: 10%;
-    font-family: 'Roboto', sans-serif;
+    width: 100%;
+    text-align: center;
 }
 #arrowtop{
     width: 50px;
@@ -222,14 +208,6 @@ input, button{
     font-family: 'Roboto', sans-serif;
     text-align: center;
     font-size: 1.1vw;
-}
-#app{
-    top: 8vh;
-    right: 87%;
-    cursor: pointer;
-    font-size: 1.1vw;
-    width: 10vw;
-    font-family: 'Roboto', sans-serif;
 }
 #loading{
     position: fixed;
