--- a/mobile/index.css
+++ b/mobile/index.css
@@ -145,3 +145,10 @@ input, #signup{
     top: 50%;
     box-shadow: 0px 0px 15px #111;
 }
+#floor a{
+    color: rgb(255, 239, 215);
+}
+#floor{
+    font-family: 'Roboto', sans-serif;
+    font-size: 3vw;
+}
